codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__default_footer_generating_thread_title.snap
---
source: tui/src/chatwidget/tests/terminal_title.rs
expression: "render_bottom_popup(&chat, 100)"
---
› Describe a task

  GPT-5.6-Sol default · /tmp/project · ⠋
